--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -3,3 +3,10 @@ project(moveit_benchmark_suite_resources)
 find_package(catkin REQUIRED)
 
 catkin_package()
+
+install(DIRECTORY
+  objects
+  requests
+  robots
+  scenes
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
