--- a/moveit/CMakeLists.txt
+++ b/moveit/CMakeLists.txt
@@ -40,6 +40,14 @@ target_link_libraries(collision_check ${PROJECT_NAME} ${catkin_LIBRARIES})
 install(DIRECTORY include/moveit_benchmark_suite
   DESTINATION ${CATKIN_GLOBAL_INCLUDE_DESTINATION})
 
+install(DIRECTORY
+  launch
+  benchmarks
+  config
+  aggregate
+  plots
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+
 install(PROGRAMS scripts/run_benchmarks.sh
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
