install mtc benchmark library
otherwise the installed binary is broken

--- a/mtc/CMakeLists.txt
+++ b/mtc/CMakeLists.txt
@@ -35,7 +35,7 @@ install(DIRECTORY
   config
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
 
-install(TARGETS pickplace
+install(TARGETS ${PROJECT_NAME} pickplace
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
