--- a/moveit/config/motion_planning_pp.yaml
+++ b/moveit/config/motion_planning_pp.yaml
@@ -20,40 +20,42 @@ profiler_config:
 
   # Resource moveit_msgs/MotionPlanRequest
   requests:
-    # - name: jc
-    #   resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/jc.yaml
-    - name: poc-blk01
-      resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk01.yaml
-    - name: poc-blk02
-      resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk02.yaml
-    - name: poc-blk03
-      resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk03.yaml
-    - name: poc-blk04
-      resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk04.yaml
-    - name: poc-blk05
-      resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk05.yaml
-    - name: poc-blk06
-      resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk06.yaml
-    - name: poc-blk07
-      resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk07.yaml
-    - name: poc-blk08
-      resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk08.yaml
-    - name: poc-blk09
-      resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk09.yaml
-    - name: poc-blk10
-      resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk10.yaml
-    - name: poc-blk11
-      resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk11.yaml
-    - name: poc-blk12
-      resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk12.yaml
-    - name: poc-blk13
-      resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk13.yaml
-    - name: poc-blk14
-      resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk14.yaml
-    - name: poc-blk15
-      resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk15.yaml
-    - name: poc-blk16
-      resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk16.yaml
+    - name: jc
+      resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/jc.yaml
+
+    # Cartesian goals to pre-grasp each block/cube
+    # - name: poc-blk01
+    #   resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk01.yaml
+    # - name: poc-blk02
+    #   resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk02.yaml
+    # - name: poc-blk03
+    #   resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk03.yaml
+    # - name: poc-blk04
+    #   resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk04.yaml
+    # - name: poc-blk05
+    #   resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk05.yaml
+    # - name: poc-blk06
+    #   resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk06.yaml
+    # - name: poc-blk07
+    #   resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk07.yaml
+    # - name: poc-blk08
+    #   resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk08.yaml
+    # - name: poc-blk09
+    #   resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk09.yaml
+    # - name: poc-blk10
+    #   resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk10.yaml
+    # - name: poc-blk11
+    #   resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk11.yaml
+    # - name: poc-blk12
+    #   resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk12.yaml
+    # - name: poc-blk13
+    #   resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk13.yaml
+    # - name: poc-blk14
+    #   resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk14.yaml
+    # - name: poc-blk15
+    #   resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk15.yaml
+    # - name: poc-blk16
+    #   resource: package://moveit_benchmark_suite_resources/requests/bbt/panda/poc_blk16.yaml
 
   # Resource moveit_config (robot)
   robot:
@@ -85,18 +87,18 @@ profiler_config:
   # - Override the 'requests' pipeline_id field
   # - Extends query 'planners' which overrides the 'requests' planner_id field
   planning_pipelines:
-    # - name: ompl
-    #   resource: package://moveit_benchmark_suite_resources/robots/panda/config/ompl_planning.yaml
-    #   parameters:
-    #     planners:
-    #       - RRT
-    #       - RRTConnect
-    #       - EST
-    #       - PRM
-    #       - LBKPIECE
-    #       - BiEST
-    - name: chomp
-      resource: package://moveit_benchmark_suite_resources/robots/panda/config/chomp_planning.yaml
+    - name: ompl
+      resource: package://moveit_benchmark_suite_resources/robots/panda/config/ompl_planning.yaml
       parameters:
         planners:
-          - CHOMP
+          #- RRT
+          - RRTConnect
+          #- EST
+          #- PRM
+          #- LBKPIECE
+          #- BiEST
+    # - name: chomp
+    #   resource: package://moveit_benchmark_suite_resources/robots/panda/config/chomp_planning.yaml
+    #   parameters:
+    #     planners:
+    #       - CHOMP
