--- a/moveit/plots/collision_checks_mesh_quality.yaml
+++ b/moveit/plots/collision_checks_mesh_quality.yaml
@@ -301,7 +301,7 @@ gnuplot_config:
           name: avg_contact_count
           title: '{/:Bold Collision (Self + Environment)}\nCountact count (mean) for request \"All (Distance)\" against scenes and collision detector \"Bullet\"'
   options:
-    terminal: PNG
+    terminal: QT
     n_row: 1
     n_col: 1
     size:
